Added another project and made some edits to text on project and home pages. Also some minor tweaks to the stylesheet.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* MEYER RESET (to fix issues with space at top of page, etc.)
+/* MEYER RESET (to fix issues with layout, etc.)
 http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
 License: none (public domain)
@@ -51,10 +51,7 @@ table {
 
 /* END OF RESET */
 
-#container {
-	height: 100%;
-	width: 100%;
-}
+
 #sidebar {
 	position: fixed;
 	width: 100px;
@@ -67,20 +64,18 @@ table {
 	text-align: center;
 	opacity: 0.6;
 	text-transform: lowercase;
-
 }
 
 #content {
 	position: absolute;
 	margin-left: 140px;
-	width: 600px;
+	max-width: 600px;
 	padding: 10px 20px 0px 20px;
-
 }
 
 body {
 	font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	color: #FFD373;
 	background-color: #DFF0EC;
 	background-image: url('kayaking-cropped.jpg');
@@ -101,7 +96,6 @@ h1 {
 h2 {
 	font-weight: bold;
 	font-size: 30px;
-
 }
 
 h3 {
@@ -109,22 +103,29 @@ h3 {
 	font-size: 24px;
 }
 
+p {
+	margin-bottom: 10px;
+}
+
 img {
 	padding: 10px;
 }
+
 a {
 	color: #DFF0EC;
 	text-decoration: none;
 }
 
 a:hover {
-	font-weight: bolder;
+	color: #60B9CE;
 }
 
-
-}
 #sidebar a {
 	color: #FFFFFF;
+}
+
+#sidebar a:hover {
+	color: #FFD373;
 }
 
 .rounded {
@@ -137,15 +138,7 @@ a:hover {
 }
 
 .transparent {
-	opacity: 0.8;
-}
-
-.imglink a {
 	opacity: 0.7;
-}
-
-.imglink a:hover {
-	opacity: 1;
 }
 
 .articletitle {
@@ -161,6 +154,14 @@ a:hover {
 	border-style: solid;
 	border-color: #DFF0EC;
 	margin: 15px 0px 0px 0px;
+}
+
+i {
+	font-style: italic;
+}
+
+b {
+	font-style: bold;
 }
 
 
