--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+/*
+Color palette
+
+background/light color: #FECEA8 -> #F6F7BD
+header background/dark color: #2A363B -> #BF4D28
+text/dark color: #2A363B ->
+links: #0B8C8F
+links on hover: #028F76
+header border/accent: #B3E099
+
 /* MEYER RESET (to fix issues with layout, etc.)
 http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
@@ -32,6 +42,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	height: 100%;
 }
 ol, ul {
 	list-style: none;
@@ -52,44 +63,83 @@ table {
 /* END OF RESET */
 
 
-#sidebar {
-	position: fixed;
-	width: 100px;
-	top:0;
-	left:0;
-	padding: 20px 20px 20px 20px;
-	background-color: #03899C;
-	font-size: 20px;
-	font-weight: lighter;
-	text-align: center;
-	opacity: 0.6;
-	text-transform: lowercase;
+#headercontainer {
+	padding-top: 10px;
+	width: 100%;
+	height: 80px;
+	background-color: #736275;
+	border-bottom: 10px solid #3D6D7B;
+}
+
+#header {
+	width: 60%;
+	min-width: 600px;
+	margin: 0 auto;
+}
+
+#header h2 {
+	vertical-align: middle;
+	float: left;
+	padding: 5px;
+	color: white;
+	font-family: "Fjord One", serif;
+	font-size: 40px;
+	line-height: 60px;
+}
+
+#linklist {
+	float: right;
+	list-style-type: none;
+	font-family: 'Source Sans Pro', serif;
+	font-size: 24px;
+	line-height: 60px;
+	padding: 5px;
+}
+
+#linklist li {
+	display: inline-block;
+	padding: 0px 10px;
+	vertical-align: middle;
+}
+
+#linklist a {
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #2A363B;
+}
+
+#linklist a:hover {
+	text-decoration: underline;
+	color: white;
 }
 
 #content {
-	position: absolute;
-	margin-left: 140px;
-	max-width: 600px;
-	padding: 10px 20px 0px 20px;
+	width: 60%;
+	min-width: 600px;
+	margin: 0 auto;
+	clear: both;
+	background-color: rgba(255, 255, 255, 0.65);
+	padding: 0px 10px 35px 10px;
 }
 
 body {
 	font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, sans-serif;
 	font-size: 18px;
-	color: #FFD373;
-	background-color: #DFF0EC;
-	background-image: url('kayaking-cropped.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
+	color: #332C3E;
 	line-height: 1.4;
-	background-attachment: fixed;
+	background: url(background.png) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+
 }
 
 h1 {
 	text-align: center;
 	font-size: 70px;
 	text-transform: lowercase;
-	color: #DFF0EC;
+	color: #0B8C8F;
 	font-weight: lighter;
 }
 
@@ -112,20 +162,13 @@ img {
 }
 
 a {
-	color: #DFF0EC;
+	color: #0B486B;
 	text-decoration: none;
+	font-weight: bold;
 }
 
 a:hover {
-	color: #60B9CE;
-}
-
-#sidebar a {
-	color: #FFFFFF;
-}
-
-#sidebar a:hover {
-	color: #FFD373;
+	color: #736275;
 }
 
 .rounded {
@@ -135,6 +178,7 @@ a:hover {
 .float {
 	float: left;
 	margin: 5px 10px;
+	vertical-align: middle;
 }
 
 .transparent {
@@ -152,7 +196,7 @@ a:hover {
 .line-divider {
 	border-top-width: 5px;
 	border-style: solid;
-	border-color: #DFF0EC;
+	border-color: #0B8C8F;
 	margin: 15px 0px 0px 0px;
 }
 
@@ -164,4 +208,12 @@ b {
 	font-style: bold;
 }
 
+.intro {
+	font-size: 20px;
+	padding: 30px 0px;
+	vertical-align: middle;
+}
 
+a h3 {
+	font-weight: normal;
+}
