--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ table {
 	min-width: 650px;
 	margin: 0 auto;
 	clear: both;
-	background-color: rgba(255, 255, 255, 0.65);
+	background-image: url(transparency.png);
 	padding: 10px 10px 35px 10px;
 }
 
