--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ table {
 	padding-top: 10px;
 	width: 100%;
 	height: 80px;
-	background-color: #736275;
+	background-color: black;
 	border-bottom: 10px solid #3D6D7B;
 }
 
@@ -105,7 +105,7 @@ table {
 #linklist a {
 	text-decoration: none;
 	text-transform: uppercase;
-	color: #2A363B;
+	color: #3D6D7B;
 }
 
 #linklist a:hover {
@@ -196,7 +196,7 @@ a:hover {
 .line-divider {
 	border-top-width: 5px;
 	border-style: solid;
-	border-color: #0B8C8F;
+	border-color: #3D6D7B;
 	margin: 15px 0px 0px 0px;
 }
 
