--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-/*
-Color palette
-
-background/light color: #FECEA8 -> #F6F7BD
-header background/dark color: #2A363B -> #BF4D28
-text/dark color: #2A363B ->
-links: #0B8C8F
-links on hover: #028F76
-header border/accent: #B3E099
-
 /* MEYER RESET (to fix issues with layout, etc.)
 http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
@@ -47,51 +37,35 @@ body {
 ol, ul {
 	list-style: none;
 }
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
 
 /* END OF RESET */
 
 
 #headercontainer {
-	padding-top: 10px;
+	padding: 10px 0px;
 	width: 100%;
-	height: 80px;
 	background-color: #272C28;
 	border-bottom: 10px solid #3D6D7B;
 }
 
-#header {
-	width: 60%;
-	min-width: 775px;
-	margin: 0 auto;
-}
 
-#header h2 {
+#headercontainer h2 {
 	vertical-align: middle;
-	float: left;
-	padding: 5px;
+	padding-left: 20%;
 	color: #6EB5AD;
 	font-family: "Quicksand", Helvetica, sans-serif;
-	font-size: 50px;
+	font-size: 40px;
 	line-height: 60px;
 }
 
 #linklist {
-	float: right;
+	position: absolute;
+	right: 20%;
+	top: 10px;
 	list-style-type: none;
 	font-family: 'Open Sans', serif;
-	font-size: 23px;
+
+	font-size: 16px;
 	line-height: 60px;
 	padding: 5px;
 }
@@ -106,6 +80,7 @@ table {
 	text-decoration: none;
 	text-transform: uppercase;
 	color: #3D6D7B;
+	font-weight: normal;
 	-webkit-transition:color .2s linear;
        -moz-transition: color .2s linear;
          -o-transition: color .2s linear;
@@ -119,11 +94,10 @@ table {
 
 #content {
 	width: 60%;
-	min-width: 775px;
 	margin: 0 auto;
 	clear: both;
 	background-image: url(transparency3.png);
-	padding: 10px 10px 35px 10px;
+	padding: 10px 10px 55px 10px;
 }
 
 body {
@@ -131,7 +105,7 @@ body {
 	font-size: 18px;
 	color: #272C28;
 	line-height: 1.4;
-	background-image: url(http://colourlovers.com.s3.amazonaws.com/images/patterns/4192/4192389.png);
+	background-image: url(backgroundpattern.png);
 	background-size: 250px;
 	/*background: url(background2.png) no-repeat center center fixed; 
 	-webkit-background-size: cover;
@@ -150,7 +124,6 @@ h1 {
 }
 
 h2 {
-	font-weight: bold;
 	font-size: 30px;
 }
 
@@ -170,7 +143,7 @@ img {
 a {
 	color: #C81604;
 	text-decoration: none;
-	font-weight: bold;
+	font-weight: normal;
 		-webkit-transition:color .2s linear;
        -moz-transition: color .2s linear;
          -o-transition: color .2s linear;
@@ -181,13 +154,11 @@ a:hover {
 	color: #3D6D7B;
 }
 
-.rounded {
-	border-radius: 15px;
-}
 
 .float {
 	float: left;
-	margin: 5px 10px;
+	display: block;
+	padding: 5px 20px;
 	vertical-align: middle;
 }
 
@@ -223,19 +194,61 @@ a h3 {
 	font-weight: normal;
 }
 
-@media screen and (max-width: 400px) {
+.screenshot {
+	width: 400px;
+}
+
+@media screen and (max-width: 900px) {
 	#linklist {
-		display: none;
+		position: static;
+		text-align: center;
+		font-size: 22px;
+		line-height: 1.3;
+		padding: 10px0;
+		margin: 0;
+
 	}
+
 	#content, #header, #headercontainer, body {
-		min-width: 100%;
-		overflow: hidden;
+		width: 100%;
+		padding: 0;
+	}
+
+	p, h1, h2, h3, img {
+		padding: 10px;
+	}
+
+
+
+	#headercontainer {
+		min-height: 100%;
+		padding: 10px 0px;
+	}
+
+	#headercontainer h2 {
+		padding: 0;
+		margin: 0;
+		text-align: center;
+		line-height: 1.3;
+	}
+
+	
+
+	.screenshot {
+		width: 80%;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	#headercontainer h2 {
+		font-size: 35px;
 	}
 
 	.float {
 		margin: 0 auto;
 		float: none;
 		display: block;
-
+		padding: 10px;
 	}
+}
 
